# IGE

./: .gitignore  CMakeLists.txt  README.md
cmake/GLFW/: glfw3Targets-noconfig.cmake  glfw3Targets.cmake
cmake/Qt5Core/: Qt5CoreConfig.cmake  Qt5CoreConfigExtras.cmake  Qt5CoreConfigExtrasMkspecDir.cmake
cmake/Qt5Gui/: Qt5GuiConfig.cmake  Qt5GuiConfigExtras.cmake  Qt5Gui_QGifPlugin.cmake
cmake/Qt5Widgets/: Qt5WidgetsConfig.cmake  Qt5WidgetsConfigExtras.cmake
src/: CMakeLists.txt  main.cpp  rc.qrc
src/QT/: glMainWindow.cpp  glMainWindow.h  guiIGE.cpp  guiIGE.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  scene.cpp  scene.hpp
src/QT/QtCore/: qalgorithms.h  qarraydata.h  qatomic.h  qatomic_cxx11.h  qbasicatomic.h  qbytearray.h  qbytearraylist.h  qchar.h  qconfig.h  qcontainerfwd.h  qcontainertools_impl.h  qcoreapplication.h  qcoreevent.h  qdatastream.h  qeventloop.h  qflags.h  qgenericatomic.h  qglobal.h  qglobalstatic.h  qhash.h  qhashfunctions.h  qiodevice.h  qiterator.h  qline.h  qlist.h  qlocale.h  qlogging.h  qmap.h  qmargins.h  qmetatype.h  qnamespace.h  qnumeric.h  qobject.h  qobjectdefs.h  qpair.h  qpoint.h  qrect.h  qrefcount.h  qregexp.h  qscopedpointer.h  (+18 more)
src/QT/QtGui/: qbrush.h  qcolor.h  qcursor.h  qdesktopservices.h  qfont.h  qfontinfo.h  qfontmetrics.h  qguiapplication.h  qicon.h  qimage.h  qinputmethod.h  qkeysequence.h  qmatrix.h  qpaintdevice.h  qpainterpath.h  qpalette.h  qpixelformat.h  qpixmap.h  qpolygon.h  qregion.h  qrgb.h  qrgba64.h  qtguiglobal.h  qtransform.h  qwindowdefs.h  qwindowdefs_win.h
src/QT/QtGui/5.14.1/QtGui/private/: qtgui-config_p.h
src/QT/QtWidgets/: qapplication.h  qmainwindow.h  qsizepolicy.h  qtabwidget.h  qtwidgetsglobal.h  qwidget.h
src/gl3w/: gl3w.c
src/imgui/: imgui_impl_opengl3.cpp  imgui_impl_opengl3.h
src/vulkan/: vk_sdk_platform.h  vulkan.hpp
